--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-dirs = "5.0"
 clap = { version = "4.0", features = ["derive"] }
+dirs = "5.0"
+reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
+serde_json = "1.0"  # For JSON parsing
+tokio = { version = "1.0", features = ["full"] }  # For async runtime
